working embeded ui with forms

--- a/upload-server/internal/ui/upload.tmpl
+++ b/upload-server/internal/ui/upload.tmpl
@@ -101,6 +101,6 @@
     </body>
 
     <script>const uploadUrl="{{.}}"</script>
-    <script src="/assets/tus.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tus-js-client@latest/dist/tus.js"></script>
     <script src="/assets/demo.js"></script>
 </html>
