populate destination fields

--- a/upload-server/internal/ui/manifest.tmpl
+++ b/upload-server/internal/ui/manifest.tmpl
@@ -8,7 +8,7 @@
     <body>
         <h2>Please fill in the sender manifest form for your file</h2>
         <form method="POST" action="/upload">
-          {{range .Metadata.Fields}}
+          {{range .MetadataFields}}
           <div>
             <label for="{{.FieldName}}">{{FixNames .FieldName}}</label>
             {{if not .AllowedValues}}
@@ -22,6 +22,14 @@
             {{ end }}
           </div>
           {{end}}
+          <div>
+            <label for="data_stream_id">Data Stream ID</label>
+            <input name="data_stream_id" type="text" value="{{.DataStream}}" />
+          </div>
+          <div>
+            <label for="data_stream_route">Data Stream Route</label>
+            <input name="data_stream_route" type="text" value="{{.DataStreamRoute}}" />
+          </div>
           <button type="submit">Next</button>
         </form>
     </body>
