--- a/upload-server/internal/ui/manifest.tmpl
+++ b/upload-server/internal/ui/manifest.tmpl
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link href="assets/index.css" rel="stylesheet">
         <link href="assets/manifest.css" rel="stylesheet">
         <title>Manifest</title>
     </head>
