--- a/upload-server/internal/ui/assets/manifest.css
+++ b/upload-server/internal/ui/assets/manifest.css
@@ -1,37 +1,12 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0 auto;
-}
-
 #upload-container {
   margin: 0 auto;
-  max-width: 700px;
+  padding: 0 15px;
+  width: 100%;
 }
 
-.form-container input {
-  background: #f1f1f1;
-  border: 1px solid #aaa;
-  border-radius: 5px;
-  display: inline-block;
-  margin: 5px 0;
-  padding: 10px;
-  width: 450px;
-}
-
-.form-container select {
-  background: #f1f1f1;
-  border: 1px solid #aaa;
-  border-radius: 5px;
-  display: inline-block;
-  margin: 5px 0;
-  padding: 10px;
-  width: 470px;
-}
-
-.form-container label {
-  display: block;
-  font-weight: 600;
-  margin-top: 5px;
+.form-container {
+  margin: 0 auto;
+  width: 100%;
 }
 
 .form-container button {
@@ -44,5 +19,34 @@ body {
   font-size: 16px;
   margin: 20px 0 10px 0;
   padding: 10px;
-  width: 470px;
+  width: 100%;
+  max-width: 800px;
+}
+
+.form-container input {
+  background: #f1f1f1;
+  border: 1px solid #aaa;
+  border-radius: 5px;
+  display: inline-block;
+  margin: 5px 0;
+  padding: 10px;
+  width: 100%;
+  max-width: 778px;
+}
+
+.form-container label {
+  display: block;
+  font-weight: 600;
+  margin-top: 5px;
+}
+
+.form-container select {
+  background: #f1f1f1;
+  border: 1px solid #aaa;
+  border-radius: 5px;
+  display: inline-block;
+  margin: 5px 0;
+  padding: 10px;
+  width: 100%;
+  max-width: 800px;
 }
