name attr for selects and redirect to home if uid not found

--- a/upload-server/internal/ui/manifest.tmpl
+++ b/upload-server/internal/ui/manifest.tmpl
@@ -14,7 +14,7 @@
             {{if not .AllowedValues}}
               <input id="{{.FieldName}}" name="{{.FieldName}}" type="text" />
             {{ else }}
-              <select>
+              <select name="{{.FieldName}}">
                 {{range .AllowedValues}}
                   <option value="{{.}}">{{.}}</option>
                 {{end}}
