--- a/upload-server/internal/ui/manifest.tmpl
+++ b/upload-server/internal/ui/manifest.tmpl
@@ -4,6 +4,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Manifest</title>
+
+        <link rel="stylesheet" href="/assets/index.css">
     </head>
     <body>
         <h2>Please fill in the sender manifest form for your file</h2>
@@ -26,11 +28,11 @@
             {{ end }}
           </div>
           {{end}}
-          <div>
+          <div class="hidden">
             <label for="data_stream_id">Data Stream ID</label>
             <input id="data_stream_id" name="data_stream_id" type="text" value="{{.DataStream}}" />
           </div>
-          <div>
+          <div class="hidden">
             <label for="data_stream_route">Data Stream Route</label>
             <input id="data_stream_route" name="data_stream_route" type="text" value="{{.DataStreamRoute}}" />
           </div>
