--- a/upload-server/internal/ui/upload.tmpl
+++ b/upload-server/internal/ui/upload.tmpl
@@ -2,11 +2,13 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link href="assets/index.css" rel="stylesheet">
+        <link href="assets/manifest.css" rel="stylesheet">
         <title>DEX Upload</title>
     </head>
     <body>
         <div class="container">
-        <h1>Demo File Uploader</h1>
+        <h1>Demo File Uploader d</h1>
         <p>
             This demo purpose is to upload files to the custom tusd go server. 
         </p>
