--- a/upload-server/internal/ui/assets/manifest.css
+++ b/upload-server/internal/ui/assets/manifest.css
@@ -1,3 +1,9 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0 auto;
+  width: 100vw;
+}
+
 #upload-container {
   margin: 0 auto;
   padding: 0 15px;
