--- a/upload-server/internal/ui/manifest.tmpl
+++ b/upload-server/internal/ui/manifest.tmpl
@@ -3,10 +3,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link href="assets/manifest.css" rel="stylesheet">
-        <title>Manifest</title>
-
         <link rel="stylesheet" href="/assets/index.css">
+        <link href="assets/manifest.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Manifest</title>
     </head>
     <body>
       <div id="upload-container">
