--- a/upload-server/internal/ui/manifest.tmpl
+++ b/upload-server/internal/ui/manifest.tmpl
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="/assets/index.css">
-        <link href="assets/manifest.css" rel="stylesheet">
+        <link rel="stylesheet" href="/assets/form.css" >
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Manifest</title>
     </head>
