--- a/upload-server/internal/ui/assets/form.css
+++ b/upload-server/internal/ui/assets/form.css
@@ -6,13 +6,11 @@ body {
 
 #upload-container {
   margin: 0 auto;
-  padding: 0;
-  width: 90%;
+  padding: 1.2rem;
 }
 
 .form-container {
   margin: 0;
-  width: 90%;
   max-width: 550px;
 }
 
