--- a/upload-server/internal/ui/assets/index.css
+++ b/upload-server/internal/ui/assets/index.css
@@ -1,5 +1,15 @@
+* {
+    box-sizing: border-box;
+}
+
+html {
+    /* 1 rem = 10px */
+    font-size: 62.5%
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.4rem;
   margin: 0 auto;
 }
 
