--- a/upload-server/internal/ui/assets/form.css
+++ b/upload-server/internal/ui/assets/form.css
@@ -15,7 +15,7 @@ body {
 }
 
 .form-container button {
-  background: #487de6;
+  background: #0057b7;
   border: none;
   border-radius: 5px;
   color: white;
