UI Clean Up (#455)
* example/foundation for embedding a basic ui

* Working session round 1

- forms and ui

* force version 2 in manifest

* working session 2

* working embeded ui with forms

* configurable urls for ui

* populate destination fields

* move destiantion page to root route

* error handle for template execute

* Adding configs and tests for local upload testing in playwright

* foundation for ui automated tests

* form styling

* Adding ids for accessibility for the frontend labels and extending the end to end tests in playwright

* integration tests for ui endpoints

* redirects from status page to langing page when no upload found

* name attr for selects and redirect to home if uid not found

* remove default for debug

* move field filter func

* remove demo and tus lib

* add required for manifest fields

* hide destination fields

* UI Styling for Manifest Form (#452)

* form styling

* update branch

* re-add class

* changes

* apply missing classes

* revert example

* add styling for upload

* show required fields

* upload page 508

* manifest 508

* landing page 508

---------

Co-authored-by: David Gage <whytheplatypus@gmail.com>
Co-authored-by: tma5 <tma5@cdc.gov>
Co-authored-by: Alex de los Reyes <areyes@fearless.tech>

--- a/upload-server/internal/ui/manifest.tmpl
+++ b/upload-server/internal/ui/manifest.tmpl
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="/assets/index.css">
@@ -9,21 +9,27 @@
         <title>Manifest</title>
     </head>
     <body>
+      <main>
       <div id="upload-container">
-        <h2>Please fill in the sender manifest form for your file</h2>
+        <h1>Please fill in the sender manifest form for your file</h1>
+        <p>
+          * indicates a required field
+        </p>
         <div class="form-container">
           <form method="POST" action="/upload">
             {{range .MetadataFields}}
             <div>
-              <label for="{{.FieldName}}">{{FixNames .FieldName}}</label>
+              <label for="{{.FieldName}}">
+                {{FixNames .FieldName}} {{if .Required}}*{{end}}
+              </label>
               {{if not .AllowedValues}}
                 {{ if .Required }}
-                  <input id="{{.FieldName}}" name="{{.FieldName}}" type="text" required/>
+                  <input id="{{.FieldName}}" id="{{.FieldName}}" type="text" required/>
                 {{ else }}
-                  <input id="{{.FieldName}}" name="{{.FieldName}}" type="text" />
+                  <input id="{{.FieldName}}" id="{{.FieldName}}" type="text" />
                 {{ end }}
               {{ else }}
-              <select name="{{.FieldName}}">
+              <select id="{{.FieldName}}">
                 {{range .AllowedValues}}
                   <option value="{{.}}">{{.}}</option>
                 {{end}}
@@ -33,14 +39,15 @@
             {{end}}
             <div class="hidden">
               <label for="data_stream_id">Data Stream ID</label>
-              <input id="data_stream_id" name="data_stream_id" type="text" value="{{.DataStream}}" />
+              <input id="data_stream_id" id="data_stream_id" type="text" value="{{.DataStream}}" />
             </div>
             <div class="hidden">
               <label for="data_stream_route">Data Stream Route</label>
-              <input id="data_stream_route" name="data_stream_route" type="text" value="{{.DataStreamRoute}}" />
+              <input id="data_stream_route" id="data_stream_route" type="text" value="{{.DataStreamRoute}}" />
             </div>
             <button type="submit">Next</button>
           </form>
         </div>
+      </main>
     </body>
 </html>
