name attrs for form inputs

--- a/upload-server/internal/ui/manifest.tmpl
+++ b/upload-server/internal/ui/manifest.tmpl
@@ -29,7 +29,7 @@
                   <input id="{{.FieldName}}" name="{{.FieldName}}" type="text" />
                 {{ end }}
               {{ else }}
-              <select name="{{.FieldName}}" id="{{.FieldName}}">
+              <select id="{{.FieldName}}" name="{{.FieldName}}">
                 {{range .AllowedValues}}
                   <option value="{{.}}">{{.}}</option>
                 {{end}}
