--- a/upload-server/internal/ui/upload.tmpl
+++ b/upload-server/internal/ui/upload.tmpl
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="/assets/index.css">
         <link rel="stylesheet" href="/assets/form.css">
+        <link rel="stylesheet" href="/assets/progress.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>DEX Upload</title>
     </head>
@@ -67,9 +68,9 @@
                 </div>
 
                 <div class="row">
-                    <div class="span8">
-                    <div class="progress progress-striped progress-success">
-                        <div class="bar" style="width: 0%;"></div>
+                    <div class="span8 progress-container">
+                    <div class="progress progress-striped progress-success hidden">
+                        <div class="bar hidden" style="width: 0%;">Uploading...</div>
                     </div>
                     </div>
                     <!-- <div class="span4">
