--- a/upload-server/internal/ui/upload.tmpl
+++ b/upload-server/internal/ui/upload.tmpl
@@ -70,7 +70,7 @@
                 <div class="row">
                     <div class="span8 progress-container">
                     <div class="progress progress-striped progress-success hidden">
-                        <div class="bar hidden" style="width: 0%;">Uploading...</div>
+                        <div class="bar hidden" style="width: 0%;"></div>
                     </div>
                     </div>
                     <!-- <div class="span4">
