--- a/upload-server/internal/ui/manifest.tmpl
+++ b/upload-server/internal/ui/manifest.tmpl
@@ -10,6 +10,7 @@
     </head>
     <body>
       <main>
+        <div id="nav-banner"></div>
       <div id="upload-container">
         <h1>Please fill in the sender manifest form for your file</h1>
         <p>
@@ -50,4 +51,5 @@
         </div>
       </main>
     </body>
+    <script src="/assets/banner.js"></script>
 </html>
