--- a/upload-server/internal/ui/upload.tmpl
+++ b/upload-server/internal/ui/upload.tmpl
@@ -10,6 +10,7 @@
     </head>
     <body>
         <main>
+            <div id="nav-banner"></div>
             <div id="upload-container">
                 <h1>Demo File Uploader</h1>
                 <p>
@@ -90,4 +91,5 @@
     <script>const uploadUrl="{{.}}"</script>
     <script src="https://cdn.jsdelivr.net/npm/tus-js-client@latest/dist/tus.js"></script>
     <script src="/assets/demo.js"></script>
+    <script src="/assets/banner.js"></script>
 </html>
