add skip to main content

--- a/upload-server/internal/ui/manifest.tmpl
+++ b/upload-server/internal/ui/manifest.tmpl
@@ -9,9 +9,9 @@
         <title>Manifest</title>
     </head>
     <body>
-      <main>
-        <div id="nav-banner"></div>
-      <div id="upload-container">
+      <nav id="nav-banner"></nav>
+      <main id="main">
+      <div class="upload-container">
         <h1>Please fill in the sender manifest form for your file</h1>
         <p>
           * indicates a required field
