--- a/upload-server/internal/ui/upload.tmpl
+++ b/upload-server/internal/ui/upload.tmpl
@@ -9,9 +9,9 @@
         <title>DEX Upload</title>
     </head>
     <body>
-        <main>
-            <div id="nav-banner"></div>
-            <div id="upload-container">
+        <nav id="nav-banner"></nav>
+        <main id="main">
+            <div class="upload-container">
                 <h1>Demo File Uploader</h1>
                 <p>
                     This demo purpose is to upload files to the custom tusd go server. 
