use go html components

--- a/upload-server/internal/ui/manifest.tmpl
+++ b/upload-server/internal/ui/manifest.tmpl
@@ -9,7 +9,7 @@
         <title>Manifest</title>
     </head>
     <body>
-      <nav id="nav-banner"></nav>
+      {{template "navbar" .Navbar}}
       <main id="main">
       <div class="upload-container">
         <h1>Please fill in the sender manifest form for your file</h1>
