--- a/upload-server/internal/ui/upload.tmpl
+++ b/upload-server/internal/ui/upload.tmpl
@@ -9,7 +9,7 @@
         <title>DEX Upload</title>
     </head>
     <body>
-        <nav id="nav-banner"></nav>
+        {{template "navbar" .Navbar}}
         <main id="main">
             <div class="upload-container">
                 <h1>Demo File Uploader</h1>
