--- a/upload-server/internal/ui/manifest.tmpl
+++ b/upload-server/internal/ui/manifest.tmpl
@@ -9,8 +9,9 @@
         <title>Manifest</title>
     </head>
     <body>
-      <main>
-      <div id="upload-container">
+      {{template "navbar" .Navbar}}
+      <main id="main">
+      <div class="upload-container">
         <h1>Please fill in the sender manifest form for your file</h1>
         <p>
           * indicates a required field
