fixing issue with upload template

--- a/upload-server/internal/ui/upload.tmpl
+++ b/upload-server/internal/ui/upload.tmpl
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="/assets/index.css">
         <link rel="stylesheet" href="/assets/form.css">
         <link rel="stylesheet" href="/assets/progress.css">
+        <link rel="icon" type="image/x-icon" href="/assets/dex_logo.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>DEX Upload</title>
     </head>
@@ -88,7 +89,7 @@
         </main>
     </body>
 
-    <script>const uploadUrl="{{.}}"</script>
+    <script>const uploadUrl="{{.UploadURL}}"</script>
     <script src="https://cdn.jsdelivr.net/npm/tus-js-client@latest/dist/tus.js"></script>
     <script src="/assets/demo.js"></script>
 </html>
