--- a/upload-server/internal/ui/upload.tmpl
+++ b/upload-server/internal/ui/upload.tmpl
@@ -86,10 +86,12 @@
                     Successful uploads will be listed here.
                 </p>
             </div>
+            <div>{{.Info}}</div>
         </main>
     </body>
 
-    <script>const uploadUrl="{{.UploadURL}}"</script>
+    <script>const info="{{.Info}}"</script>
+    <script>const uploadUrl="{{.UploadUrl}}"</script>
     <script src="https://cdn.jsdelivr.net/npm/tus-js-client@latest/dist/tus.js"></script>
     <script src="/assets/demo.js"></script>
 </html>
