header for status

--- a/upload-server/internal/ui/upload.tmpl
+++ b/upload-server/internal/ui/upload.tmpl
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="/assets/index.css">
         <link rel="stylesheet" href="/assets/form.css">
         <link rel="stylesheet" href="/assets/progress.css">
+        <link rel="stylesheet" href="/assets/status.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>DEX Upload</title>
     </head>
@@ -79,10 +80,10 @@
                     </div> -->
                 </div>
 
-                <hr>
-                <h2>Uploads</h2>
-                <p id="upload-list">
-                    Successful uploads will be listed here.
+                <hr />
+                <h2>Upload</h2>
+                <p id="upload-status-container">
+                    <h3>Upload Status: <span id="upload-status" class="upload-success"></span></h3>
                 </p>
             </div>
         </main>
