--- a/upload-server/internal/ui/assets/progress.css
+++ b/upload-server/internal/ui/assets/progress.css
@@ -18,3 +18,11 @@
   margin: auto 0;
   padding-left: 10px;
 }
+
+.upload-success {
+  color: rgb(6, 162, 6);
+}
+
+.upload-failure {
+  color: rgb(155, 0, 0);
+}
